--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,11 +1,15 @@
 body {
 
     color: #f7f7f7;
-
-    .jumbotron {
-        background-image: url("../images/nasa.jpg");
-        background-size: 100% 100%;
-        text-align: center;
-      }
   }
+ 
+ .tag {
+     font-family: inherit; 
+     font-size: 1rem;
+    }  
 
+.jumbotron {
+    background-image: url("../images/nasa.jpg");
+    background-size: 100% 100%;
+    text-align: center;
+  }
